RESOLVED FIXED225837
REGRESSION (r269824): Random tile corruption when scrolling/zooming in macCatalyst
https://bugs.webkit.org/show_bug.cgi?id=225837
Summary REGRESSION (r269824): Random tile corruption when scrolling/zooming in macCat...
Tim Horton
Reported 2021-05-14 17:43:49 PDT
REGRESSION (r269824): Random tile corruption when scrolling/zooming in macCatalyst
Attachments
Patch (1.73 KB, patch)
2021-05-14 17:44 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-05-14 17:44:00 PDT
Tim Horton
Comment 2 2021-05-14 17:44:02 PDT
EWS
Comment 3 2021-05-14 20:15:51 PDT
Committed r277528 (237756@main): <https://commits.webkit.org/237756@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428693 [details].
Note You need to log in before you can comment on or make changes to this bug.