REGRESSION (r269824): Random tile corruption when scrolling/zooming in macCatalyst https://bugs.webkit.org/show_bug.cgi?id=225837 <rdar://problem/75053997>

Reviewed by Simon Fraser.

* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::swapToValidFrontBuffer):
Mark the newly front buffer non-volatile before painting into it.
This was lost in r269824. Oddly, this caused less trouble than
one might expect, except on some particular hardware.


Canonical link: https://commits.webkit.org/237756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277528 268f45cc-cd09-0410-ab3c-d52691b4dbfc